--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -10,6 +10,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
+        #overlay{
+            background-color:rgba(255, 255, 255, 0.3);
+        }
         #godforsakeme{
             font-family:'Orbitron', sans-serif;
             color:rgb(200, 1, 1);
@@ -17,7 +20,6 @@
         }
         body{
             margin: 0;
-            background-color:rgba(255, 255, 255, 0.9);
             background-image:url("{% static 'astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
             background-repeat: repeat;
@@ -43,27 +45,29 @@
     </style>
 </head>
 <body>
-    <div class="container mt-5">
+    <div id="overlay">
+        <div class="container mt-5">
 
-        <p id="godforsakeme">
-            This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
-        </p>
+            <p id="godforsakeme">
+                This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
+            </p>
 
-        <!-- Login Form -->
-        <h1 id="text" class="mb-4">Login:</h1>
-        <form id="login_form" action="" method="POST">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label id="text" for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
-            </div>
-            <div class="mb-3">
-                <label id="text" for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password">
-            </div>
-            <input type="submit" value="Submit" class="btn btn-secondary">
-        </form>
+            <!-- Login Form -->
+            <h1 id="text" class="mb-4">Login:</h1>
+            <form id="login_form" action="" method="POST">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label id="text" for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
+                </div>
+                <div class="mb-3">
+                    <label id="text" for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                <input type="submit" value="Submit" class="btn btn-secondary">
+            </form>
 
+        </div>
     </div>
 
     <!-- Parallax Effect for Dynamic Starry Background -->
