--- a/webserver/mysite/astronomers/templates/registration/login.html
+++ b/webserver/mysite/astronomers/templates/registration/login.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +9,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
-        #overlay{
-            background-color:rgba(255, 255, 255, 0.3);
-        }
         #godforsakeme{
             font-family:'Orbitron', sans-serif;
             color:rgb(200, 1, 1);
@@ -20,19 +16,36 @@
         }
         body{
             margin: 0;
-            background-image:url("{% static 'astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
+            background-image: url("https://i.gifer.com/7VE.gif");
             background-repeat: repeat;
             background-position: center;
-        }  
+            background-attachment: fixed;
+            position: relative;
+        }
+        
+        /* White overlay using ::before pseudo-element */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.85);
+            z-index: -1;
+            pointer-events: none;
+        }
+        
         #text {
             font-family:'Orbitron', sans-serif;
-            color:white;
+            color: #333;
         }
         #container {
             position:relative;
             height:100%;
             width:100%;
+            z-index: 1;
         }
         #login_form{
             position:absolute;
@@ -41,33 +54,31 @@
             top:50%;
             left:50%;
             transform: translate(-50%, -50%);
+            z-index: 2;
         }
     </style>
 </head>
 <body>
-    <div id="overlay">
-        <div class="container mt-5">
+    <div class="container mt-5">
 
-            <p id="godforsakeme">
-                This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
-            </p>
+        <p id="godforsakeme">
+            This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login
+        </p>
 
-            <!-- Login Form -->
-            <h1 id="text" class="mb-4">Login:</h1>
-            <form id="login_form" action="" method="POST">
-                {% csrf_token %}
-                <div class="mb-3">
-                    <label id="text" for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
-                </div>
-                <div class="mb-3">
-                    <label id="text" for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-                <input type="submit" value="Submit" class="btn btn-secondary">
-            </form>
+        <!-- Login Form -->
+        <h1 id="text" class="mb-4">Login:</h1>
+        <form id="login_form" action="" method="POST">
+            <div class="mb-3">
+                <label id="text" for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
+            </div>
+            <div class="mb-3">
+                <label id="text" for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <input type="submit" value="Submit" class="btn btn-secondary">
+        </form>
 
-        </div>
     </div>
 
     <!-- Parallax Effect for Dynamic Starry Background -->
