--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -11,7 +11,10 @@
             <div id="shitty_container">
                 <h1 id="wlc_title">@auto_astro</h1>
                 {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}" id="navOUT">Log Out</a>
+                <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button id="navOUT" type="submit" class="btn btn-link">Logout</button>
+                </form>
                 {% else %}
                 <a href="{% url 'login' %}" id="navLOG">Log in</a>
                 {% endif %}
