--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -43,15 +43,22 @@
     </style>
 </head>
 <body>
+    {% block content %}
+
+    {% if form.errors %}
+        <p>There was an error with your form</p>
+    {% endif %}
     <div class="container mt-5">
 
-        <p id="godforsakeme">This page WILL keep reloading UNTIL the astronomer (u) inputs a correct login</p>
+        <p id="godforsakeme">This page WILL keep reloading UNTIL the astronomer (u) inputs a correct registration input</p>
 
         <!-- Login Form -->
 
         <h1 id="text" class="mb-4">Register:</h1>
-        <form id="login_form" action="" method="POST">
+        <form id="login_form" action="{% url 'register_astronomer' %}" method="POST">
             {% csrf_token %}
+
+            {{ form }}
             <input type="submit" value="Submit" class="btn btn-secondary">
         </form>
 
@@ -80,5 +87,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 </html>
