--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -46,7 +46,7 @@
     {% block content %}
 
     {% if form.errors %}
-        <p>There was an error with your form</p>
+        <!-- <p>There was an error with your form</p> -->
     {% endif %}
     <div class="container mt-5">
 
