--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -37,9 +37,9 @@
             font-size:auto;
             color:#ffffff;
             position:absolute;
-            width:65%;
-            height:40%;
-            left:5%;
+            width:93%;
+            height:auto;
+            left:7%;
         }
     </style>
 </head>
