--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -47,7 +47,7 @@
     {% block content %}
 
     {% if form.errors %}
-        <!-- <p>There was an error with your form</p> -->
+        <p>There was an error with your form...</p>
     {% endif %}
     <div class="container mt-5">
 
@@ -60,7 +60,7 @@
         <form id="register_form" action="{% url 'register_astronomer' %}" method="POST">
             {% csrf_token %}
 
-            {{ form }}
+            {{ form.as_p }}
             <br/>
             <input type="submit" value="Submit" class="btn btn-secondary">
         </form>
