--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -47,7 +47,7 @@
     {% block content %}
 
     {% if form.errors %}
-        <p>There was an error with your form...</p>
+        <!-- <p>There was an error with your form</p> -->
     {% endif %}
     <div class="container mt-5">
 
@@ -67,7 +67,7 @@
         <br/>
 
     </div>
-
+    
     <!-- Parallax Effect for Dynamic Starry Background -->
     <script>
         (function() {
