--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -11,7 +11,7 @@
             <div id="shitty_container">
                 <h1 id="wlc_title">@auto_astro</h1>
                 {% if user.is_authenticated %}
-                <h2 id="wlc_greet">Welcome {% user.first_name %} !</h2>
+                <h2 id="wlc_greet">Welcome {{ user.first_name }} !</h2>
                 <form method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
                     <button style="cursor: pointer;" id="navOUT" type="submit" class="btn btn-link">Log out</button>
