--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -23,8 +23,7 @@
                 </form>
                 <a href="{% url 'login' %}" id="navLOG">&nbsp;Log in</a>
                 {% endif %}
-                <h1>Auto_Astro</h1>
-                <!-- <a href='' id="navUSE">Explore the Skies</a> -->
+                <a href='' id="navUSE">Explore the Skies</a>
                 <a href='' id="navABO">About</a>
                 <a href='' id="navCON">Contact&nbsp;Us</a>
             </div>
