--- a/webserver/mysite/astronomers/templates/registration/register_astronomer.html
+++ b/webserver/mysite/astronomers/templates/registration/register_astronomer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tile>Registration Page</tile>
+    <title>Registration Page</title>
     <link rel="icon" type="image/x-icon" href="{% static 'astronomers/visible_logo.ico' %}">
 
     <!-- Bootstrap CSS (load first so custom CSS overrides it) -->
