--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -5,7 +5,7 @@
         <title>Automating Astrophotography - A SOM Project by Sakoute Amine</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
-        <link rel="icon" type="image/x-icon" href="{% static 'webapp/visible_logo.ico' %}">
+        <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
     </head>
     <body>
         <nav id="parallax_nav">
