--- a/webserver/mysite/webapp/templates/webapp/contact.html
+++ b/webserver/mysite/webapp/templates/webapp/contact.html
@@ -3,9 +3,43 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
         <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
         <title>Contact Us Form</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+
+        #godforsakeme{
+            font-family:'Orbitron', sans-serif;
+            color:rgb(200, 1, 1);
+            font-size: 20px;
+        }
+        body{
+            margin: 0;
+            background-color:rgba(255, 255, 255, 0.9);
+            background-image:url("{% static 'astronomers/STARRY.gif' %}");
+            font-family: 'Orbitron', sans-serif;
+            background-repeat: repeat;
+            background-position: center;
+        }  
+        #text {
+            font-family:'Orbitron', sans-serif;
+            color:white;
+        }
+        #container {
+            position:relative;
+            height:100%;
+            width:100%;
+        }
+        #login_form{
+            position:absolute;
+            width:65%;
+            height:40%;
+            top:50%;
+            left:50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
     </head>
     <body>
         <h1>Hi ! This is the contact form !</h1>
@@ -25,5 +59,6 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
