--- a/webserver/mysite/webapp/templates/webapp/contact.html
+++ b/webserver/mysite/webapp/templates/webapp/contact.html
@@ -8,15 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
-
-        #godforsakeme{
-            font-family:'Orbitron', sans-serif;
-            color:rgb(200, 1, 1);
-            font-size: 20px;
-        }
         body{
             margin: 0;
-            background-color:rgba(255, 255, 255, 0.9);
             background-image:url("{% static 'astronomers/STARRY.gif' %}");
             font-family: 'Orbitron', sans-serif;
             background-repeat: repeat;
@@ -26,12 +19,7 @@
             font-family:'Orbitron', sans-serif;
             color:white;
         }
-        #container {
-            position:relative;
-            height:100%;
-            width:100%;
-        }
-        #login_form{
+        #contact_form{
             position:absolute;
             width:65%;
             height:40%;
@@ -43,22 +31,45 @@
     </head>
     <body>
         <h1>Hi ! This is the contact form !</h1>
-        <form class="was_validated" method="post">
+        <form id="contact_form" class="was_validated" method="post">
             {% csrf_token %}
             <div class="mb-3">
-                <label for="fname">Name:</label>
+                <label id="text" for="fname">Name:</label>
                 <input  name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp" required>
             </div>
             <div class="mb-3">
-                <label name="email" for="EmailAddress" class="form-label">Email:</label>
+                <label id="text" name="email" for="EmailAddress" class="form-label">Email:</label>
                 <input name="email" type="email" class="form-control" id="email" required>
             </div>
             <div class="mb-3">
-                <label for="subject" class="form-label">Subject:</label>
+                <label id="text" for="subject" class="form-label">Subject:</label>
                 <textarea name="subject" class="form-control" id="subject" placeholder="How can you be so cool XD ?!" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+                </script>
+        <!-- Parallax Effect for Dynamic Starry Background in Body-->
+         <script>
+            (function() {
+                // Add event listener
+                document.addEventListener("mousemove", parallax_body);
+                const elem = document.querySelector("body");
+                
+                // Magic happens here
+                function parallax_body(e) {
+                    let _w = window.innerWidth;
+                    let _h = window.innerHeight;
+                    let _mouseX = e.clientX;
+                    let _mouseY = e.clientY;
+
+                    let offset_coeff = 0.005;
+                    let bg_Xoffset = -(_mouseX - _w/2) * offset_coeff;
+                    let bg_Yoffset = -(_mouseY - _h/2) * offset_coeff * -1.75;
+
+                    elem.style.backgroundPosition = `${bg_Xoffset}% ${bg_Yoffset}%`;
+                }
+            })();
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
